<resources>
    <string name="app_name">Weather</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="icon">Icon</string>
    <string name="details">Details</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temp">Temperature</string>
    <string name="day">Day</string>

    <!--Titles-->
    <string name="humidity_title">Humidity:\u0020</string>
    <string name="pressure_title">Pressure:\u0020</string>
    <string name="pressure_value_title">\u0020hPa</string>
    <string name="percent_title">%</string>
    <string name="temp_title">°</string>
    <string name="search_city_hint">Input city</string>

    <!--Toolbar-->
    <string name="action_show_cities">Show cities</string>
    <string name="action_add_city">Add city</string>
</resources>
