<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/city_adapter_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_time"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/city_adapter_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@id/city_adapter_time"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/city_adapter_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon"
        android:layout_alignStart="@id/city_adapter_temp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/city_adapter_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"/>
</RelativeLayout>