<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/container_padding">

    <TextView
        android:id="@+id/day_adapter_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/secondary_text_dark"
        android:text="@string/day"/>

    <TextView
        android:id="@+id/day_adapter_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/day_adapter_text_size"
        android:layout_margin="@dimen/day_adapter_text_margin"
        android:text="@string/icon"/>

    <TextView
        android:id="@+id/day_adapter_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@id/day_adapter_icon"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/temp"/>

</RelativeLayout>